--- a/ReadMe
+++ b/ReadMe
@@ -2,3 +2,7 @@ Documents to take a look
 
 https://www.rfc-editor.org/rfc/rfc2812  - Client Protocol
 https://www.rfc-editor.org/rfc/rfc2813  - Server Protocol
+https://www.rfc-editor.org/rfc/rfc2810  - Architecture
+
+https://en.wikipedia.org/wiki/Internet_Relay_Chat - General Info
+https://www.w3.org/Addressing/draft-mirashi-url-irc-01.txt#:~:text=IRC%20servers%20often%20use%20the,for%20clients%20to%20connect%20to.  - Port Range - Security Measures
