--- a/ReadMe
+++ b/ReadMe
@@ -1,3 +1,6 @@
+Good check
+./ircserv 127.0.1.16:6676:test 7000 9
+
 Documents to take a look
 
 https://www.rfc-editor.org/rfc/rfc2812  - Client Protocol
@@ -6,3 +9,6 @@ https://www.rfc-editor.org/rfc/rfc2810  - Architecture
 
 https://en.wikipedia.org/wiki/Internet_Relay_Chat - General Info
 https://www.w3.org/Addressing/draft-mirashi-url-irc-01.txt#:~:text=IRC%20servers%20often%20use%20the,for%20clients%20to%20connect%20to.  - Port Range - Security Measures
+https://modern.ircdocs.horse/ - Resume
+IRSSI - cliente por terminal
+NETCAT - nc localhost <port>
