--- a/ReadMe
+++ b/ReadMe
@@ -31,12 +31,12 @@ Cliente de referencia: IRSSI
 TAREAS
 [ ] Test unitarios (Zome)
 [✅] Encontrar cliente de referencia y probarlo (Rbrdr)
-[ ] Comandos NICK y USER
+[ ] Comandos NICK y USER (Enviar confrmación cuando existen ambos)
 [ ] Testear que los comandos no se bloquean
 [ ] Añadir comandos para crear y unirse a un canal
 [ ] Comandos incorrectos
-[ ] Kill cliente
-[ ] Kill conexión
+[✅] Kill cliente
+[✅] Kill conexión
 [ ] Todos los comandos de operación de canales
 [ ] Probar conexión irc
 [ ] Mensajes privados y avisos
