--- a/ReadMe
+++ b/ReadMe
@@ -43,6 +43,11 @@ https://www.gnu.org/software/libc/manual/html_node/Socket_002dLevel-Options.html
 int     poll(struct pollfd fds[], nfds_t nfds, int timeout);
 	poll() examines a set of file descriptors to see if some of them are ready for I/O or if certain events have occurred on them.
 	poll() will wait at least timeout milliseconds for an event to occur on any of the descriptors. If the value of timeout is 0, poll() will return immediately. If the value of timeout is -1, poll() will block until a requested event occurs or until the call is interrupted.
+	struct pollfd {
+         int    fd;       /* file descriptor */
+         short  events;   /* events to look for */
+         short  revents;  /* events returned */
+     	};
 
 # TAREAS
 
