fcntl() info + better format

--- a/ReadMe
+++ b/ReadMe
@@ -40,7 +40,7 @@ https://www.gnu.org/software/libc/manual/html_node/Socket_002dLevel-Options.html
 
 ### Used functions
 
-int     poll(struct pollfd fds[], nfds_t nfds, int timeout);
+	int     poll(struct pollfd fds[], nfds_t nfds, int timeout);
 	
 poll() examines a set of file descriptors to see if some of them are ready for I/O or if certain events have occurred on them.
 poll() will wait at least timeout milliseconds for an event to occur on any of the descriptors. If the value of timeout is 0, poll() will return immediately.
@@ -53,13 +53,19 @@ If the value of timeout is -1, poll() will block until a requested event occurs 
      	};
 
 
-int     accept(int socket, struct sockaddr *restrict address, socklen_t *restrict address_len);
+	int     accept(int socket, struct sockaddr *restrict address, socklen_t *restrict address_len);
 
 accept() extracts the first connection request on the queue of pending connections, creates a new socket with the same properties of socket, and allocates a new file descriptor for the socket. 
 If no pending connections are present on the queue, and the socket is not marked as non-blocking, accept() blocks the caller until a connection is present.
 If the socket is marked non-blocking and no pending connections are present on the queue, accept() returns an error as described below.
 The accepted socket may not be used to accept more connections.  The original socket remains open.
 
+
+	int	fcntl(int fildes, int cmd, ...);
+
+fcntl() provides for control over descriptors.  The argument fildes is a descriptor to be operated on by cmd.
+F_SETFD            Set the file descriptor flags to arg.
+O_NONBLOCK   Non-blocking I/O; if no data is available to a read call, or if a write operation would block, the read or write call returns -1 with the error EAGAIN.
 
 # TAREAS
 
