--- a/ReadMe
+++ b/ReadMe
@@ -73,15 +73,17 @@ O_NONBLOCK   Non-blocking I/O; if no data is available to a read call, or if a w
 
 [ ] Test unitarios (Zome)
 [✅] Encontrar cliente de referencia y probarlo (Rbrdr)
-[ ] Comandos NICK y USER (Enviar confrmación cuando existen ambos)
+[ ] Enviar confrmación cuando existen nick y user
+[ ] Sistematizar command replies (Zome)
+[ ] Arreglar errores comandos (Zome)
 [ ] Testear que los comandos no se bloquean
-[ ] Añadir comandos para crear y unirse a un canal
+[✅] Añadir comandos para crear y unirse a un canal
 [ ] Comandos incorrectos
 [✅] Kill cliente
 [✅] Kill conexión
 [ ] Todos los comandos de operación de canales
-[ ] Probar conexión irc
-[ ] Mensajes privados y avisos
+[✅] Probar conexión irc
+[✅] Mensajes privados y avisos
 [ ] Privilegios de usuario
 [ ] serv::wait_for_connection change TIMEOUT
 [ ] serv::wait_for_connection check ping clients
