--- a/ReadMe
+++ b/ReadMe
@@ -24,8 +24,7 @@ INSTALL:
 
 # Documentation
 
-https://www.rfc-editor.org/rfc/rfc1459.html - Docs old irc
-https://modern.ircdocs.horse/	- Summary modern irc
+https://modern.ircdocs.horse/	- Summary
 https://en.wikipedia.org/wiki/Internet_Relay_Chat - General Info
 https://www.rfc-editor.org/rfc/rfc2812  - Client Protocol
 https://www.rfc-editor.org/rfc/rfc2813  - Server Protocol
@@ -35,7 +34,6 @@ https://www.w3.org/Addressing/draft-mirashi-url-irc-01.txt#:~:text=IRC%20servers
 https://www.geekshed.net/tag/limits/ - IRC LIMITS
 https://swtch.com/irc/irc.h - List of Replys
 https://www.quakenet.org/help/general/how-do-i-setunset-channeluser-modes - Useful example for mode command
-https://alien.net.au/irc/irc2numerics.html - Numeric replies
 
 ### Socket stuff
 https://www.gta.ufrj.br/ensino/eel878/sockets/sockaddr_inman.html
@@ -75,22 +73,19 @@ O_NONBLOCK   Non-blocking I/O; if no data is available to a read call, or if a w
 
 [✅] Test unitarios (Zome)
 [✅] Encontrar cliente de referencia y probarlo (Rbrdr)
-[ ] Enviar confrmación cuando existen nick y user
-[ ] Sistematizar command replies (Zome)
-[ ] Arreglar errores comandos (Zome)
+[✅] Comandos NICK y USER (Enviar confrmación cuando existen ambos)
 [ ] Testear que los comandos no se bloquean
 [✅] Añadir comandos para crear y unirse a un canal
-[ ] Comandos incorrectos
+[✅] Comandos incorrectos
 [✅] Kill cliente
 [✅] Kill conexión
 [ ] Todos los comandos de operación de canales
 [✅] Probar conexión irc
 [✅] Mensajes privados y avisos
 [ ] Privilegios de usuario
-[ ] serv::wait_for_connection change TIMEOUT
-[ ] serv::wait_for_connection check ping clients
-[ ] autosock::server_listening revise setsockopt flags
-[ ] autosock::server_listening define max size for poll
+[✅] serv::wait_for_connection change TIMEOUT
+[✅] autosock::server_listening revise setsockopt flags
+[✅] autosock::server_listening define max size for poll
 =======
 
 
